--- a/main-pages/projects.html
+++ b/main-pages/projects.html
@@ -50,7 +50,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/jshelp.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/jshelp.html'"></div></td>
           <td class="name"><h3>JS-HELP</h3></td>
         </tr>
 
@@ -59,7 +59,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/LilGuy.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/LilGuy.html'"></div></td>
           <td class="name"><h3>LIL GUY</h3></td>
         </tr>
 
@@ -68,7 +68,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/vjam.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/vjam.html'"></div></td>
           <td class="name"><h3>VECTORJAM</h3></td>
         </tr>
 
@@ -77,7 +77,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/quadtree.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/quadtree.html'"></div></td>
           <td class="name"><h3>QUAD TREES</h3></td>
         </tr>
 
@@ -86,7 +86,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/ceilings.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/ceilings.html'"></div></td>
           <td class="name"><h3>INVERSE REALITIES</h3></td>
         </tr>
 
@@ -95,7 +95,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/three-d.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/three-d.html'"></div></td>
           <td class="name"><h3>3D MODELING</h3></td>
         </tr>
 
@@ -104,7 +104,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/vpl.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/vpl.html'"></div></td>
           <td class="name"><h3>VPL</h3></td>
         </tr>
 
@@ -113,7 +113,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/boxes.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/boxes.html'"></div></td>
           <td class="name"><h3>JULIET'S BOXES</h3></td>
         </tr>
 
@@ -122,7 +122,7 @@
         </tr>
 
         <tr>
-          <td><div class="circle" onclick="location.href ='./project-pages/mll.html'"></div></td>
+          <td><div class="circle" onclick="location.href ='../project-pages/mll.html'"></div></td>
           <td class="name"><h3>MOTORS, LIGHTS, &amp; LOGIC</h3></td>
         </tr>
 
