changed body font size, some wording, added extra space below some headers, and attached my resume

--- a/main-pages/resume.html
+++ b/main-pages/resume.html
@@ -47,7 +47,7 @@
 
     <div id="download">
       <p><span class="section-title">DOWNLOAD</span></p>
-      <p><a href="#" download="jslade-resume">pdf version</a></p>
+      <p><a href="../media/julietslade-resume.pdf" download="julietslade-resume">pdf version</a></p>
 
     </div>
 
@@ -85,7 +85,7 @@
         <span class="details">Most Comfortable/Fluent</span>
             <p>JavaScript • Python</p>
           <span class="details">Familiar with</span>
-            <p>HTML/CSS • Java • PHP • C • MySQL • Sass • Scala • neo4J</p>
+            <p>HTML/CSS • Java • C • PHP • MySQL • Sass • Scala • Neo4j</p>
           <span class="details">Knew at one point</span>
             <p>Scheme • MIPS Assembly</p>
           <span class="details">Other</span>
