--- a/project-pages/jshelp.html
+++ b/project-pages/jshelp.html
@@ -49,7 +49,7 @@
       is a tool to help students get hints while working on programming problems. I sat in on
       and worked as a lab assistant for the intro. to web programming class and observed that
       students often need lots of examples and help moving forward in problems. JS-help, given
-      a solution, breaks it into a sequence of automatically generated hitns that can be
+      a solution, breaks it into a sequence of automatically generated hints that can be
       expanded much like how code folding works, but in reverse.
       <br>
       <br>
