--- a/project-pages/minesweeper.html
+++ b/project-pages/minesweeper.html
@@ -46,7 +46,9 @@
     <div id="combined-gallery">
       <div id="descriptoon">
         <p><span class="section-title">MINESWEEPER</span></p>
-        <p>After playing Minesweeper on the weekly for as long as I can remember, I finally decided
+        <p>
+          <br>
+          After playing Minesweeper on the weekly for as long as I can remember, I finally decided
           to make it. It's in a relatively rough state visually, but the ultimate goal is to
           translate it to JavaScript to embed it here, or make (my first) app.
           <br>
