--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div id="description">
       <p><span class="section-title">ABOUT ME</span></p>
       <p>
+        <br>
         Hi, I'm Juliet Slade and this is my first "real" website.
         <br>
         <br>
@@ -63,7 +64,7 @@
         found that I love helping people learn to program and answering questions. It both
         solidified my own knowledge and pushed me to learn more. I also found that I enjoy
         figuring out how to build things and helping people realize their projects. I have little
-        trouble getting completely invested in and obsessed with every interesting challenge that
+        trouble getting too invested in and obsessed with every interesting challenge that
         comes my way.
       </p>
     </div>
